--- a/decky/static/sass/_deck.scss
+++ b/decky/static/sass/_deck.scss
@@ -55,11 +55,11 @@
 		.g,
 		.b {
 			color: rgba($color-text, 0.8);
+		}
 		// White is a special case because text becomes hard to read.  Therefore,
 		// we darken it quite a bit.
 		.w {
-			color: darken($color-mtg-w, 25%);
-		}
+			color: shade($color-mtg-w, 35%);
 		}
 	}
 	.u,
@@ -165,7 +165,7 @@
 			overflow: hidden;
 			margin-left: 2px;
 			box-shadow: inset 0 0 20px rgba(0,0,0,0.1);
-			background: darken(#2d2d2d, 2.5%);
+			background: shade(#2d2d2d, 2.5%);
 			position: relative;
 			z-index: 2;
 			img {
@@ -276,7 +276,7 @@
 	}
 	.sideboard {
 		border-radius: 5px;
-		background: darken($color-background, 2.5%);
+		background: shade($color-background, 2.5%);
 		box-shadow: inset 1px 0 3px rgba(0,0,0,0.25);
 		padding: 1rem;
 		margin-top: 0.7rem;
