--- a/decky/static/sass/_forms.scss
+++ b/decky/static/sass/_forms.scss
@@ -68,7 +68,7 @@ input[type='text'] {
 		border-radius: 2px 0 0 2px;
 		&:focus {
 			box-shadow: inset 0 4px 8px rgba(0,0,0,0.15);
-			background: darken(#2d2d2d, 1%);
+			background: shade(#2d2d2d, 1%);
 			border-color: rgba($color-primary, 0.5);
 		}
 	}
@@ -87,7 +87,7 @@ input[type='text'] {
 		}
 		&:active {
 			box-shadow: inset 0 4px 8px rgba(0,0,0,0.15);
-			background: darken(#2d2d2d, 1%);
+			background: shade(#2d2d2d, 1%);
 			border-color: rgba($color-primary, 0.5);
 		}
 	}
